--- a/client/src/components/auth/SignUp/SignUp.css
+++ b/client/src/components/auth/SignUp/SignUp.css
@@ -31,6 +31,7 @@ h2 {
   width: 100%;
   color: #111;
   font-weight: lighter;
+  font-weight: bold;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
@@ -69,7 +70,7 @@ input.error {
   display: relative;
 }
 
-.userName,
+.name,
 .email,
 .password {
   display: flex;
@@ -77,7 +78,7 @@ input.error {
   margin-bottom: 15px;
 }
 
-.userName,
+.name,
 .email,
 .password {
   width: 100%;
